objects/GLI_Email2Case_ToEmails__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store the To emails that are used in Email2case for GLI Service</description>
    <fields>
        <fullName>To_Email10__c</fullName>
        <label>To Email10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email11__c</fullName>
        <label>To Email11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email12__c</fullName>
        <label>To Email12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GLI Email2Case ToEmails</label>
</CustomObject>